[project]
name = "build-a-complete-medical-chatbot-with-llms-langchain-pinecone-flask-aws-main"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11,<3.12"
dependencies = [
    "flask==3.1.1",
    "langchain==0.3.26",
    "langchain-community==0.3.26",
    "langchain-huggingface>=0.3.1",
    "langchain-openai==0.3.24",
    "langchain-pinecone==0.2.8",
    "openrouter>=0.11.3",
    "pypdf==5.6.1",
    "python-dotenv==1.1.0",
    "sentence-transformers==4.1.0",
]
